Set C++ standard to C++14

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,14 @@
 # Create the project name and other required variables.
 cmake_minimum_required (VERSION 2.6)
+
+#------------------------------------------
+# GLOBAL COMPILER FEATURES
+
+# Do NOT want vendor extensions (e.g. no --std=gnu++14)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
+#--------------------------------------------------
+# Project specific features.
 project (NESCPP17)
 
 #Bring the include files to the project
@@ -8,6 +17,9 @@ include_directories(include)
 #Glob the source files to a variable.
 file(GLOB SOURCES "src/*.cpp")
 
-
 #Main executable is nesemu
 add_executable (nesemu ${SOURCES})
+
+## --------------------------------------------------------
+#And add required complier features
+set_property(TARGET nesemu PROPERTY CXX_STANDARD 14)
