Create compilation database
This is useful for tools which automatically check for syntax, etc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,17 @@ cmake_minimum_required (VERSION 2.6)
 # Do NOT want vendor extensions (e.g. no --std=gnu++14)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+#Include warnings.
+add_definitions(-Wall -Wextra -pedantic)
+
 #--------------------------------------------------
 # Project specific features.
 project (NESCPP17)
+
+#Create a compilation database for use of other tools.
+# This should be set after project declaration.
+# See http://archive.is/aBhI9
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 #Bring the include files to the project
 include_directories(include)
